# Politics

./: CMakeLists.txt  main.cpp  notes.txt
include/: App.hpp  CMakeLists.txt  Clock.hpp  Engine.hpp  Log.hpp  Nation.hpp  Pop.hpp
include/Common/: Date.hpp
include/Economy/: CMakeLists.txt  Industry.hpp
include/common/: CMakeLists.txt  Date.hpp  Map.hpp  Maths.hpp  Modifier.hpp  Operation.hpp  Variable.hpp
include/common/variables/: BinaryOperation.hpp  Bounding.hpp  CMakeLists.txt  Modifier.hpp  Operation.hpp  UnaryOperation.hpp  Value.hpp  Variable.hpp
include/economy/: CMakeLists.txt  Industry.hpp
include/electors/: CMakeLists.txt  Elector.hpp  Utility.hpp
include/gui/: BottomSection.hpp  CMakeLists.txt  MainSection.hpp  WindowsSection.hpp
include/gui/windows/: CMakeLists.txt  NationWindow.hpp  Window.hpp
include/politics/: CMakeLists.txt  Laws.hpp  Party.hpp  PoliticalCompass.hpp  PoliticalCompassPoint.hpp  PoliticalCompassPointGenerator.hpp
src/: App.cpp  CMakeLists.txt  Clock.cpp  Engine.cpp  Log.cpp  Nation.cpp
src/Economy/: Industry.cpp
src/common/: CMakeLists.txt  Maths.cpp
src/economy/: CMakeLists.txt  Industry.cpp
src/electors/: CMakeLists.txt  Elector.cpp  Utility.cpp
src/gui/: BottomSection.cpp  CMakeLists.txt  MainSection.cpp  WindowsSection.cpp
src/gui/windows/: CMakeLists.txt  NationWindow.cpp  Window.cpp
src/politics/: CMakeLists.txt  Laws.cpp  Party.cpp  PoliticalCompass.cpp  PoliticalCompassPoint.cpp  PoliticalCompassPointGenerator.cpp
